--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee﻿" version="2.5">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+  ﻿" version="2.5">
 
 	<servlet>
 		<servlet-name>lunchroulette</servlet-name>
@@ -9,14 +11,27 @@
 		<servlet-name>lunchroulette</servlet-name>
 		<url-pattern>/lunchroulette</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>lunchcron</servlet-name>
+		<servlet-class>test.book.glass.LunchCronServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>lunchcron</servlet-name>
+		<url-pattern>/lunchcron</url-pattern>
+	</servlet-mapping>
 
 	<filter>
 		<filter-name>authFilter</filter-name>
 		<filter-class>test.book.glass.auth.AuthFilter</filter-class>
+		<init-param>
+			<param-name>excludes</param-name>
+			<param-value>.*?(callback|cron)$</param-value>
+		</init-param>
 	</filter>
 	<filter-mapping>
 		<filter-name>authFilter</filter-name>
-		<url-pattern>/auth</url-pattern>
+		<url-pattern>*</url-pattern>
 	</filter-mapping>
 
 	<!-- auth servlets -->
@@ -46,6 +61,16 @@
 		<user-data-constraint>
 			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
 		</user-data-constraint>
+	</security-constraint>
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>lunchcron</web-resource-name>
+			<url-pattern>/lunchcron</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
 	</security-constraint>
 
 	<welcome-file-list>
